Added Array2D to replace two-dimensional C-style arrays. Start replacing with visibility array

--- a/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj.filters
+++ b/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj.filters
@@ -413,5 +413,8 @@
     <ClInclude Include="ObjectsFactory.h">
       <Filter>Header Files\GameEngine</Filter>
     </ClInclude>
+    <ClInclude Include="Array2D.h">
+      <Filter>Header Files\Utilities</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
