--- a/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj
+++ b/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj
@@ -197,6 +197,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="Array2D.h" />
     <ClInclude Include="Building.h" />
     <ClInclude Include="BuildingContextMenu.h" />
     <ClInclude Include="BuildingType.h" />
