Level is separated into new file. World destructor moves into Level

--- a/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj
+++ b/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="House.h" />
     <ClInclude Include="HouseContextMenu.h" />
     <ClInclude Include="KeyboardState.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="MovingObjectsQueue.h" />
     <ClInclude Include="Objects.h" />
     <ClInclude Include="ObjectsFactory.h" />
