--- a/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj.filters
+++ b/RAB_RTS_2_prototype_1/RAB_RTS_2_prototype_1.vcxproj.filters
@@ -416,5 +416,8 @@
     <ClInclude Include="Array2D.h">
       <Filter>Header Files\Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="Level.h">
+      <Filter>Header Files\GameEngine</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
